Fixed the collapse/expand buttons.l

--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ td {
 
 .collapseDivBtn {
     position: relative;
-    left: -100px;
+    left: -50px;
 }
 .collapseBtn {
     position: absolute;
